--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,13 @@
     "require": {
         "fakerphp/faker": "^1.23",
         "twbs/bootstrap": "5.3.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Helpers\\" : "Helpers/",
+            "Interfaces\\" : "Interfaces/",
+            "Models\\" : "Models/",
+            "Traits\\" : "Traits/"
+        }
     }
 }
